# piranha-agent

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE_CODE_FIXES_COMPLETE.md  CLAUDE_CODE_INTEGRATION.md  CLAUDE_CODE_WHATS_MISSING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_COMPLETE.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  INSTALL.md  LICENSE  Makefile  README.md  RELEASE.md  RULES.md  RUST_CORE_BUILD_SUCCESS.md  SECURITY.md  STATUS_v0.4.2_COMPLETE.md  SUPPORT.md  WORLD_CLASS_FEATURES.md  codecov.yml  create_demo_trace.py  mkdocs.yml  noxfile.py  pyproject.toml  skills.md
.github/: DISCUSSIONS.md  PULL_REQUEST_TEMPLATE.md  PYPI_PUBLISHING.md  SETUP_CHECKLIST.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml
cookbook/: README.md
debugger_api/: app.py
debugger_ui/: index.html  package-lock.json  package.json
debugger_ui/src/: App.css  App.jsx  index.css
docs/: 100_PERCENT_COMPLETE.md  ARCHITECTURE.md  BACKEND_UI_AUDIT.md  CLAUDE_CODE_EXPLORER.md  CLAUDE_CODE_QUICKSTART.md  CLAUDE_CODE_SWARM.md  CODE_QUALITY_IMPROVEMENTS.md  CODE_QUALITY_STATUS.md  COMPARISON_SCORES.md  COMPLETE_RELEASE_SUMMARY.md  DEPENDABOT_UPDATE_COMPLETE.md  EMPTY_EXCEPT_FIXED.md  FINAL_CODE_CLEANUP.md  FINAL_TEST_STATUS.md  FINAL_TEST_STATUS_93_PERCENT.md  FRAMEWORK_COMPARISON.md  IMPROVEMENT_ROADMAP.md  MICROSOFT_FRAMEWORK_COMPARISON.md  NEW_UI_FEATURES.md  PERFECT_CODE_QUALITY.md  PLAN_MODE.md  PRE_PUBLICATION_ANALYSIS.md  PRE_PUBLICATION_STATUS.md  SECURITY.md  SECURITY_HARDENING.md  SKILLS_AND_LLM.md  SKILLS_REGISTRATION.md  UI_GUIDE.md  WASM_TRACKING.md  WIRING_VALIDATION.md  reference.md
examples/: 01_basic_agent.py  02_skills.py  03_multi_agent.py  04_autonomous_orchestration.py  04_rust_core.py  05_isolated_parallel_swarm.py  05_ollama_local.py  06_complete_features.py  06_observability_demo.py  07_wasm_sandbox.py  08_semantic_cache_fuzzy.py  09_claude_skills.py  09_observability.py  10_official_claude_skills.py  11_piranha_studio.py  12_claude_code_explorer.py  12_wasm_tracking.py  13_claude_code_swarm.py  14_test_claude_code_working.py  15_claude_code_explorer_working.py  example.py
piranha/: __init__.py  agent.py  async_agent.py  claude_skills.py  cli.py  collaboration.py  complete_claude_skills.py  debugger.py  embeddings.py  llm_provider.py  memory.py  nocode_builder.py  nocode_builder_app.py  observability.py  official_claude_skills.py  realtime.py  security.py  session.py  setup.py  skill.py  studio_dashboard.html  task.py
piranha_agent/: __init__.py  agent.py  async_agent.py  claude_code_explorer.py  claude_skills.py  cli.py  collaboration.py  complete_claude_skills.py  embeddings.py  llm_provider.py  memory.py  nocode_builder.py  nocode_builder_app.py  observability.py  official_claude_skills.py  orchestration.py  realtime.py  security.py  session.py  setup.py  skill.py  studio_dashboard.html  task.py
piranha_agent/skills/: git.py  planning.py
rust_core/: Cargo.toml
rust_core/benches/: core_bench.rs
rust_core/src/: distributed_agents.rs  event_store.rs  guardrails.rs  lib.rs  postgres_store.rs  python_bindings.rs  semantic_cache.rs  skill_registry.rs  types.rs  wasm_runner.rs
scripts/: setup_dev.sh
skills/: CATEGORIZATION.md  README.md  SKILLS.md
studio/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
studio/.next/: trace
studio/.next/cache/webpack/client-development/: index.pack.gz.old
studio/.next/dev/: lock  prerender-manifest.json  trace
studio/.next/dev/cache/: .rscinfo  next-devtools-config.json
studio/.next/dev/server/: server-reference-manifest.js  server-reference-manifest.json
studio/.next/dev/server/app/: page.js  page_client-reference-manifest.js
studio/.next/dev/static/chunks/: [root-of-the-server]__0r~.yqj._.js  [root-of-the-server]__0wq495-._.js  [root-of-the-server]__0z-b4_.._.css  [root-of-the-server]__0z-b4_.._.css.map  node_modules_070jws4._.js  node_modules_070jws4._.js.map  (+47 more)
studio/.next/dev/types/: routes.d.ts  validator.ts
studio/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
studio/.next/server/app/: page.js  page_client-reference-manifest.js
studio/.next/server/vendor-chunks/: @babel.js  @swc.js  asynckit.js  axios.js  call-bind-apply-helpers.js  clsx.js  combined-stream.js  d3-array.js  d3-color.js  d3-format.js  d3-interpolate.js  d3-path.js  d3-scale.js  d3-shape.js  d3-time-format.js  d3-time.js  debug.js  decimal.js-light.js  delayed-stream.js  dunder-proto.js  es-define-property.js  es-errors.js  es-object-atoms.js  es-set-tostringtag.js  eventemitter3.js  fast-equals.js  follow-redirects.js  form-data.js  function-bind.js  get-intrinsic.js  get-proto.js  gopd.js  has-flag.js  has-symbols.js  has-tostringtag.js  hasown.js  internmap.js  lodash.js  lucide-react.js  math-intrinsics.js  (+15 more)
studio/.next/static/chunks/: app-pages-internals.js  webpack.js
studio/.next/types/app/: layout.ts  page.ts
studio/public/: manifest.json
studio/src/app/: layout.tsx  page.tsx
studio/src/app/cache/: page.tsx
studio/src/app/collaboration/: page.tsx
studio/src/app/costs/: page.tsx
studio/src/app/events/: page.tsx
studio/src/app/guardrails/: page.tsx
studio/src/app/llm-providers/: page.tsx
studio/src/app/memory/: page.tsx
studio/src/app/skills/: page.tsx
studio/src/app/wasm/: page.tsx
tests/: conftest.py  test_agent_group.py  test_async_agent.py  test_autonomous.py  test_benchmarking.py  test_budget.py  test_claude_code_explorer.py  test_compaction.py  test_debugger.py  test_debugger_ui.py  test_hitl.py  test_llm_provider.py  test_orchestration.py  test_persistence.py  test_phase5_6.py  test_planning.py  test_python_sdk.py  test_rust_core.py  test_semantic_cache_fuzzy.py  test_skill_registry.py  test_swarm_advanced.py  test_validation.py  test_wasm.py  validate_system.py
vscode-extension/: README.md  package.json  tsconfig.json
vscode-extension/src/: extension.ts
(+86 files in other folders)
