[workspace]
resolver = "2"
members = ["rust_core"]

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["Piranha Agent Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/piranha-agent/piranha-agent"

[workspace.dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "chrono"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
wasmtime = { version = "19.0", features = ["cranelift"] }
wasmtime-wasi = "19.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 1
