[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "piranha-agent"
version = "0.4.0"
description = "Next-generation autonomous agent framework with Rust core, time-travel debugging, Wasm sandbox, and 46+ Claude Skills"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Piranha Agent Contributors" }]
keywords = ["ai", "agents", "llm", "rust", "pyo3", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "litellm>=1.35.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "gradio>=4.0",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.9",
    "respx>=0.21",
]
all = ["piranha-agent[dev]"]

[project.urls]
Homepage = "https://github.com/piranha-agent/piranha-agent"
Documentation = "https://docs.piranha-agent.dev"
Repository = "https://github.com/piranha-agent/piranha-agent"
"Bug Tracker" = "https://github.com/piranha-agent/piranha-agent/issues"

[project.scripts]
piranha-agent = "piranha.cli:main"

[tool.maturin]
manifest-path = "rust_core/Cargo.toml"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=piranha",
    "--cov-report=term-missing",
    "-v",
]
filterwarnings = [
    "ignore::RuntimeWarning:piranha",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["python_sdk"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["examples/", "docs/"]