[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "piranha-agent"
version = "0.4.2"
description = "Next-generation autonomous agent framework with Rust core, time-travel debugging, Wasm sandbox, Architecture-First Workflow, and 51+ Claude Skills"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Piranha Agent Contributors" }]
keywords = ["ai", "agents", "llm", "rust", "pyo3", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "litellm>=1.35.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "gradio>=4.0",
]

[project.optional-dependencies]
claude-explorer = ["mcp>=1.0.0"]
dev = [
    "maturin>=1.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.9",
    "respx>=0.21",
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]
all = ["piranha-agent[dev]", "piranha-agent[claude-explorer]"]

[project.urls]
Homepage = "https://github.com/piranha-agent/piranha-agent"
Documentation = "https://docs.piranha-agent.dev"
Repository = "https://github.com/piranha-agent/piranha-agent"
"Bug Tracker" = "https://github.com/piranha-agent/piranha-agent/issues"

[project.scripts]
piranha-agent = "piranha_agent.cli:main"

[tool.maturin]
manifest-path = "rust_core/Cargo.toml"
features = ["pyo3/extension-module"]
include = [
    "CHANGELOG.md",
    "SECURITY.md",
    "RULES.md",
    "skills.md",
    "CODE_OF_CONDUCT.md",
    "SUPPORT.md",
    "CONTRIBUTING.md",
    "IMPLEMENTATION_COMPLETE.md",
    "INSTALL.md",
    "GETTING_STARTED.md",
    "RELEASE.md"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=piranha_agent",
    "--cov-report=term-missing",
    "-v",
]
filterwarnings = [
    "ignore::RuntimeWarning:piranha",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["piranha_agent"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A"]
ignore = [
    "S101",  # Allow assert in tests
    "E501",  # Line length (handled by formatter)
    "B017",  # Blind exception in tests
    "N806",  # Variable naming in tests
    "B904",  # Exception chaining (nice to have, not critical)
    "B905",  # zip() strict parameter (Python 3.10+)
    "B028",  # Warning stacklevel
    "B039",  # ContextVar defaults
    "A002",  # Argument shadowing builtins (skill parameters)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "F401",  # Unused imports in tests
    "F841",  # Unused variables in tests
    "UP045",  # Optional type hints in tests
    "UP006",  # List type hints in tests
    "UP015",  # File mode in tests
    "E402",  # Import position in tests
    "F821",  # Undefined names in tests
    "A002",  # Argument shadowing in tests
]
"examples/**/*.py" = [
    "F821",  # Undefined names (examples may have imports issues)
    "F401",  # Unused imports (examples may have unused imports)
    "E501",  # Line length
    "B007",  # Unused loop variables
]
"piranha_agent/__init__.py" = [
    "E402",  # Import position (exports after conditionals)
]
"piranha_agent/nocode_builder.py" = [
    "I001",  # Import sorting
    "F841",  # Unused variables (reserved for future use)
]
"piranha_agent/agent.py" = [
    "F821",  # Forward reference type hints
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["examples/", "docs/"]